--- a/projectReport/ref.bib
+++ b/projectReport/ref.bib
@@ -50,3 +50,58 @@
   pages={11(3):191–-210},
   year={2000}
 }
+
+@article{hubel,
+    author = {Hubel, D. H. and Wiesel, T. N.},
+    citeulike-article-id = {799680},
+    citeulike-linkout-0 = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1359523/},
+    citeulike-linkout-1 = {http://view.ncbi.nlm.nih.gov/pubmed/14449617},
+    citeulike-linkout-2 = {http://www.hubmed.org/display.cgi?uids=14449617},
+    issn = {0022-3751},
+    journal = {The Journal of physiology},
+    keywords = {classic, neural\_coding, rate\_coding, vision, visual\_cortex},
+    month = jan,
+    pages = {106--154},
+    pmcid = {PMC1359523},
+    pmid = {14449617},
+    posted-at = {2008-04-19 20:27:08},
+    priority = {2},
+    title = {{Receptive fields, binocular interaction and functional architecture in the cat's visual cortex.}},
+    url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC1359523/},
+    volume = {160},
+    year = {1962}
+}
+
+@article{tibs10,
+title = {A Framework for Feature Selection in Clustering},
+author = {Witten, Daniela M. and Tibshirani, Robert},
+year = {2010},
+journal = {Journal of the American Statistical Association},
+volume = {105},
+number = {490},
+pages = {713-726},
+url = {http://EconPapers.repec.org/RePEc:bes:jnlasa:v:105:i:490:y:2010:p:713-726}
+}
+
+
+@inproceedings{barrow87,
+  added-at = {2008-03-11T14:52:34.000+0100},
+  author = {Barrow, H. G.},
+  biburl = {http://www.bibsonomy.org/bibtex/29d4b687869ab183011111b86bcb7cd80/idsia},
+  booktitle = {{P}roceedings of the IEEE First International Conference on Neural Networks {\rm ({S}an {D}iego, {CA})}},
+  citeulike-article-id = {2375761},
+  interhash = {b4c544ce68e858cffbdf9b66870da111},
+  intrahash = {9d4b687869ab183011111b86bcb7cd80},
+  key = {ICNN},
+  keywords = {nn},
+  pages = {115--121},
+  priority = {2},
+  publisher = {Piscataway, NJ: IEEE},
+  timestamp = {2008-03-11T14:52:34.000+0100},
+  title = {Learning Receptive Fields},
+  volume = {IV},
+  year = 1987
+}
+
+
+
